cap nhat san pham trong bid realtime